--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap");
+
 .App {
   text-align: center;
+  font-family: "Rubik", sans-serif;
 }
 
 .App-logo {
@@ -35,4 +38,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+.centerNavbar:hover {
+  background-color: rgb(196, 210, 214);
+  border-radius: 45px;
 }
